--- a/src/components/Header/Cart.css
+++ b/src/components/Header/Cart.css
@@ -69,3 +69,19 @@
     color: green;
     font-size: 22px;
 }
+
+.svg-inline--fa.fa-cart-arrow-down.fa-w-18 {
+    font-size: 28px;
+}
+
+.modal-dialog {
+    max-width: 90%;
+}
+
+.form-control {
+    width: 50%;
+  }
+
+a, a:visited {
+      color: white;
+}
