--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,3 +1,16 @@
 a, a:visited {
     color: black;
 }
+.fixed-top {
+    box-shadow: 1px 1px 18px #e1e1e1;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: rgb(145, 144, 143);
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+    color: rgb(52, 172, 54);
+}
