--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -14,3 +14,13 @@ a, a:visited {
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
     color: rgb(52, 172, 54);
 }
+
+span.total-item {
+    padding: 0px 5px;
+    background: #34ac36;
+    border-radius: 40px;
+    color: #fff;
+    position: absolute;
+    margin: -5px;
+    font-size: 10px;
+}
